<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leesangyoon.forecast.MainActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/desc_image"
        android:padding="5dp"
        android:src="@drawable/male" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/avatar"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/wicon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/desc_image"
            android:scaleType="fitXY"
            android:src="@drawable/d01" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/title_actual"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/temp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_temp"
            android:textSize="50sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/title_feels"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/temp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_temp"
            android:textSize="30sp"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/desc_image"
                android:scaleType="fitEnd"
                android:src="@drawable/temperature" />

            <TextView
                android:id="@+id/temp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="left|center"
                android:paddingLeft="20dp"
                android:text="@string/default_temp2"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/desc_image"
                android:scaleType="fitEnd"
                android:src="@drawable/wind" />

            <TextView
                android:id="@+id/winds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:text="@string/default_wind"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/desc_image"
                android:scaleType="fitEnd"
                android:src="@drawable/pressure" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:text="@string/default_press"
                android:typeface="sans" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/shirts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/desc_image"
        android:padding="5dp"
        android:src="@drawable/male_shirts" />

    <ImageView
        android:id="@+id/pants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/desc_image"
        android:padding="5dp"
        android:src="@drawable/male_pants" />

    <ImageView
        android:id="@+id/socks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/desc_image"
        android:padding="5dp"
        android:src="@drawable/male_socks" />

    <ImageView
        android:id="@+id/accessory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/desc_image"
        android:padding="5dp"
        android:src="@drawable/male_blank" />

    <ImageView
        android:id="@+id/accessory2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/desc_image"
        android:padding="5dp"
        android:src="@drawable/male_blank" />

    <ImageView
        android:id="@+id/accessory3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/desc_image"
        android:padding="5dp"
        android:src="@drawable/male_blank" />

</RelativeLayout>